# langchain-apps

code_interpreter/: .gitignore  README.md  pyproject.toml
code_interpreter/app/: main.py
document_assistant/: README.md  pyproject.toml
document_assistant/app/: main.py
icebreaker/: .gitignore  pyproject.toml
icebreaker/app/: first_chain.py  main.py
icebreaker/app/agents/: linkedin_lookup_agent.py
icebreaker/app/intro_vector_db/: main.py
icebreaker/app/memory_vector_db/: main.py
icebreaker/data/: medium_vector_db.txt
icebreaker/vectordb/faiss_index_start/: index.faiss  index.pkl
