[tool.poetry]
name = "code-interpreter"
version = "0.1.0"
description = ""
authors = ["armandoayala <armandolnayala@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.314"
openai = "^0.28.1"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
run-app = "app.main:run_app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
