[tool.poetry]
name = "icebreaker"
version = "0.1.0"
description = ""
authors = ["armandoayala <armandolnayala@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
langchain = "^0.0.305"
black = "^23.9.1"
openai = "^0.28.1"
install = "^1.3.5"
google-search-results = "^2.4.2"
tweepy = "^4.14.0"
flask = "^3.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
run-app = "app.first_chain:run_app"
run-lab = "app.main:run_lab"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
